Melhorada a entrada e Bean de configuração

--- a/projeto-websemantica/.classpath
+++ b/projeto-websemantica/.classpath
@@ -1,46 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v7.0">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-8-oracle">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JenaLibs"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/annotations-api.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/catalina.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/catalina-ant.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/catalina-ha.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/catalina-storeconfig.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/catalina-tribes.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/ecj-4.4.2.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/el-api.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/jasper.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/jasper-el.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/jsp-api.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-api.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-coyote.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-dbcp.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-i18n-es.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-i18n-fr.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-i18n-ja.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-jdbc.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-jni.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-spdy.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-util.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-util-scan.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/tomcat-websocket.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/tomcat/lib/websocket-api.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/bibliotecas/jstl-1.2.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/bibliotecas/virtjdbc4.jar"/>
-	<classpathentry kind="lib" path="/home/jorge/Documentos/bibliotecas/virt_jena2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
